objects/MuleSoft_Adapter_Config__mdt.object
<CustomObject>
    <description>Mulesoft Adapter Config</description>
    <fields>
        <fullName>Accept__c</fullName>
        <description>Accept</description>
        <label>Accept</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <description>CLIENT_ID used to get the AUTH Tokan</description>
        <label>Client Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <description>CLIENT_SECRET used to get the AUTH Tokan</description>
        <label>Client Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <description>ContentType used to get the type of content</description>
        <label>Content Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrelationId__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked Correlation Id will be added in header.</description>
        <label>Correlation Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <description>End Point from where we receieve the tokan</description>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantType__c</fullName>
        <description>Grant Type which we mention in the request to get Auth token</description>
        <label>Grant Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked http request body will be logged in &apos;Debug Logs&apos;.</description>
        <inlineHelpText>If checked http request body will be logged in &apos;Debug Logs&apos;.</inlineHelpText>
        <label>Log Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked response from http will be logged in &apos;Debug Logs&apos;.</description>
        <inlineHelpText>If checked response from http will be logged in &apos;Debug Logs&apos;.</inlineHelpText>
        <label>Log Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Method used while sending the request</description>
        <label>Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProdCategory__c</fullName>
        <description>Product Category used for customer validation</description>
        <label>ProdCategory</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseClass__c</fullName>
        <description>Response Class  used for Response handling</description>
        <label>ResponseClass</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeOut__c</fullName>
        <description>Time Out for server time out</description>
        <label>Time Out</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VerificationScenario__c</fullName>
        <description>Verification Scenario used for customer validation</description>
        <label>VerificationScenario</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Mulesoft Adapter Config</label>
    <pluralLabel>Mulesoft Adapter Configs</pluralLabel>
</CustomObject>